# ai-chatbot

./: .env.example  .gitignore  README.md  chat_history_20250820_120617.txt  chat_history_20250820_121859.txt  main.py  pyproject.toml  sandbox.py
docs/: test.txt
src/: chatbot.py  config.py  embedding_service.py  embeddings.py  prompts.py  tools.py
