[project]
name = "ai-chatbot-openmodelica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
]
