[project]
name = "ai-chatbot-openmodelica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.43.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langsmith>=0.4.14",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
]
